fix(git): 编译 git-remote-https helper 支持 HTTPS clone (v2.4.8)
根因：git 静态二进制缺少 git-remote-https helper，git clone https://
报 fatal: unable to find remote helper for 'https'（退出码 128）。

修复：
- 编译脚本新增 git-remote-https 静态二进制（remote-curl.c + http.c
  + http-walker.c），以 libgitremotehttps.so 打包到 jniLibs
- CI workflow 新增 "Compile static git" 步骤，用 Docker 编译
  git + git-remote-https（含 cache 加速）
- 运行时在 filesDir/git-exec/ 创建符号链接 git-remote-https →
  nativeLibraryDir/libgitremotehttps.so
- 设置 GIT_EXEC_PATH 让 git 找到 helper（execve 符号链接时 SELinux
  检查目标文件 app_lib_data_file，允许执行）
- ProcessRunner 新增 exec(cmd, env, timeout) 支持环境变量
- 同时设置 HOME 和 GIT_TEMPLATE_DIR 避免 warnings